source/objects/Bluescape_Feature_Content__c/Bluescape_Feature_Content__c.object-meta.xml
<CustomObject>
    <label>Bluescape Featured Content</label>
    <nameField>
        <label>Featured Content Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bluescape Featured Contents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>