source/objects/Bluescape_Feature_Content__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Template</fullName>
            </value>
            <value>
                <fullName>Release Notes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>