source/objects/Bluescape_Feature_Content__c/fields/Display_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Display_Sequence__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Display Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>