source/objects/Bluescape_Feature_Content__c/fields/Video__c.field-meta.xml
<CustomField>
    <fullName>Video__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Video</label>
    <type>Checkbox</type>
</CustomField>